css/dark-mode-GENERATED.css
/* ... */
/*  Special styles for special browsers.
	*/
@supports (-moz-appearance: none) {
	.markdownBody figure audio {
	    border-color: var(--GW-figure-outline-color);
	}
}

/*	Create a ‘footer’ at the bottom of pages which looks like ‘—————𝔊—————’,
	similar to the arabesque navbar.

	Footers help denote “this is the end”, and avoid the somewhat lame effect of
	just having the anonymous feedback link at the end of the page and ending
	there with nothing else.

	Implementation: Modifying the ‘fill’ does not work so well when we call an
	SVG as a ‘background-image’ (like for the  footers on the index page), so we
	do variable+invert tricks to get a white copy of the logo as a hack.
 */
#footer-decoration-container a.footer-logo::after {
	filter: invert(1);
	background-color: var(--GW-body-background-color-inverted);
}

/*  The ‘celestial symbol’ horizontal rules are SVGs and must be inverted.
 */
hr::after,
.horizontal-rule-nth-0 hr::after {
    opacity: 1;
    filter: invert(1) drop-shadow(0 0 0 currentColor);
}
.horizontal-rule-nth-1 hr::after {
    opacity: 0.75;
    filter: invert(1);
}
.horizontal-rule-nth-2 hr::after {
    opacity: 0.85;
    filter: invert(1);
}

/*  Admonition icons.
 */
div.admonition.tip::before {
    filter: invert(1);
}
div.admonition.note::before {
    filter: none;
}
div.admonition.warning::before {
    filter: none;
}
div.admonition.error::before {
    filter: none;
}

/*	SVG icons in the two darker styles of admonitions.
 */
div.admonition.warning a[data-link-icon-type='svg'] .link-icon-hook::after,
div.admonition.error a[data-link-icon-type='svg'] .link-icon-hook::after {
    filter: none;
}

/*  List bullets are SVGs and have to be inverted.
 */
ul > li::before {
    filter: invert(1);
}

/*  Exclusion for TOC entries.
 */
.TOC ul > li::before {
    filter: none;
}

/*  For sortable table column headings, we use dark versions of the up/down/both
    arrow icons.
 */
table th.tablesorter-header {
    background-image: url('/static/img/tablesorter/tablesorter-bg-dark.gif');
}
table th.tablesorter-headerAsc {
    background-image: url('/static/img/tablesorter/tablesorter-asc-dark.gif');
}
table th.tablesorter-headerDesc {
    background-image: url('/static/img/tablesorter/tablesorter-desc-dark.gif');
}

/*  Images that are marked as '.invert' by the server are inverted,
    hue-rotated, and desaturated. Other (non-invertible) images are merely
    desaturated. Hovering over an image restores it to its original state.
    Hierarchy: ‘.invert-not’: no inversion or grayscale;
    ‘.invert’/‘.invert-auto’: inverted (uninverted upon mouse hover);
    none: grayscaled (ungrayscaled on hover).
 */
img.invert,
img.invert-auto {
    filter: grayscale(50%) invert(100%) brightness(95%) hue-rotate(180deg);
}
img:not(.invert):not(.invert-auto) {
    filter: grayscale(50%);
}
img,
img.invert,
img.invert-auto {
    transition: filter 0.25s ease;
}
img:hover,
img.invert:hover,
img.invert-auto:hover,
img:not(.invert):not(.invert-auto):hover {
    filter: none;
    transition: filter 0s ease 0.25s;
}

img[src$=".svg"].invert,
img[src$=".svg"].invert-auto {
	background-color: transparent;
}
img[src$=".svg"].invert:hover,
img[src$=".svg"].invert-auto:hover {
    filter: grayscale(50%) invert(100%) brightness(95%) hue-rotate(180deg);
}

/*	Image alt-text.
 */
img.invert::before,
img.invert-auto::before {
	filter: invert(1);
}
img.invert:hover::before,
img.invert-auto:hover::before {
	filter: none;
}
/*	Styling the image alt-text interferes with the transitions in dark mode.
	(We include non-class’d `img` in this selector for consistency.)

	TEMPORARY until we transition to a color-based instead of filter-based
	scheme for this. —SA 2022-07-29
 */
img,
img:hover,
img.invert,
img.invert:hover,
img.invert-auto,
img.invert-auto:hover {
	transition: none;
}

/*  For images which have been manually marked up with ‘.invert-not’, we
    avoid any filtering at all. If they are manually marked up (artwork,
    diagrams with multiple subtly-different colors matched to a legend/caption),
    the color is important and shouldn’t be faded out by default.
 */
#markdownBody img.invert-not {
	filter: none;
}

/*  The loading spinner for object popups (image, iframe, object) is inverted
    and made more visible in dark mode.
 */
.popframe.loading::before {
    filter: invert(1);
    opacity: 0.4;
}

/*  “Loading failed” messages for object popups.
 */
.popframe.loading-failed::after {
    opacity: 0.4;
}

/*	Include-link loading spinner.
 */
a.include-loading.include-spinner::after {
	filter: invert(1);
}

/*  Masked links key toggle info alert panel.
 */
div#masked-links-key-toggle-info-alert img {
    filter: drop-shadow(0 0 3px var(--GW-reader-mode-masked-links-key-toggle-info-alert-panel-text-shadow-color));
}

/*  All SVG linkicons have to be inverted.
 */
a[data-link-icon-type*='svg'] .link-icon-hook::after {
    filter: invert(1);
}

/*	Recently-modified link icon.
 */
.has-recently-modified-icon .recently-modified-icon-hook::before,
.icon-single-white-star-on-black-circle::before {
	filter: invert(1);
}

/*	Math in Wikipedia pop-frames.
 */
.wikipedia-entry .wikipedia-math-block-wrapper img,
.wikipedia-entry .wikipedia-math-inline-wrapper img {
	filter: invert(1);
	background-color: var(--GW-wikipedia-math-image-background-color);
}

/*	Images in figures in Wikipedia pop-frames.
 */
.wikipedia-entry figure img {
	background-color: var(--GW-wikipedia-image-background-color);
}

